fix: header icon align center and page content scroll

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,7 +1,6 @@
 .App {
   width: 100vw;
   height: 100vh;
-  padding: 8px;
   color: white;
   background-color: black;
 }
@@ -11,4 +10,8 @@
   grid-template-rows: auto 1fr;
   width: 100%;
   height: 100%;
+
+  & > :nth-child(2) {
+    overflow-y: scroll;
+  }
 }
