--- a/client/src/components/NavBar/NavBar.module.scss
+++ b/client/src/components/NavBar/NavBar.module.scss
@@ -7,7 +7,7 @@
 }
 
 .header-logo {
-  margin-right: auto;
+  margin: auto auto auto 0;
 }
 
 .header-logo-link {
